fixed cell alignment

--- a/css/rc.less
+++ b/css/rc.less
@@ -95,7 +95,6 @@ tr {
     }
     &.active {
         font-weight: bold;
-        text-align: right;
     }
 }
 
